name:           hocker
version:        0.9.1
homepage:       https://github.com/knutwalker/hocker
license:        Apache-2.0
license-file:   LICENSE
category:       Development
synopsis:       Simpler Management for Docker
description:    Simpler Management for Docker
author:         knutwalker <ɯoɔ˙lıɐɯƃ(·)ɹəʞlɐʍʇnuʞ>
maintainer:     knutwalker <ɯoɔ˙lıɐɯƃ(·)ɹəʞlɐʍʇnuʞ>
build-type:     Simple
cabal-version:  >=1.10

library
  exposed-modules:
      Hocker
  other-modules:
      Hocker.Commands
    , Hocker.Data
    , Hocker.Flags
    , Hocker.IO
    , Hocker.Validation
    , Hocker.Version

  build-depends:
      base >=4.7 && <4.8
    , process
    , unordered-containers
    , text
    , yaml

  ghc-options:
    -Wall -fwarn-tabs -O
  hs-source-dirs:
    src/lib
  default-language:
    Haskell2010

executable hocker
  build-depends:
      base   >= 4.7 && <4.8
    , hocker

  ghc-options:
    -Wall -fwarn-tabs -O
  hs-source-dirs:
    src/main
  main-is:
    Main.hs
  default-language:
    Haskell2010
